fix dark mode button

--- a/web/style.css
+++ b/web/style.css
@@ -9,8 +9,8 @@
     :root {
         --background-color: #030712;
         --text-color: #f3f4f6;
-        --button-color: #f3f4f6;
-        --button-text-color: #030712;
+        --button-color: #1f2937;
+        --button-text-color: #f3f4f6;
     }
 }
 
@@ -87,6 +87,11 @@ button {
     width: 100%;
     font-weight: 500;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+@media (prefers-color-scheme: dark) {
+    button {
+        border: 0;
+    }
 }
 
 footer {
